poprawa sanctum, auth i axios. Frontend się komunikuje z backiem i mozna się logować i rejestrować
